# CNN-Acceleration

./: .gitignore  .gitmodules  README.md  vivado.jou  vivado_pid28868.str
dat_input/lenet/: config.json
dat_input/resnet18/: config.json
examples/digitrec/: digitrec_data.py  digitrec_main.py
examples/my_lenet/: gen_input_weight.py  lenet_build.py  lenet_model.py  optimize.py  run.sh
examples/my_lenet/c_lenet/: buffer.cpp  buffer.h  lenet_tb.cpp  raw.cpp  run_buffer_cosim.tcl  run_buffer_csynth.tcl  run_raw_csynth.tcl  weights.h
examples/my_resnet/: .resnet.py.swp  gen_input_weight.py  optimize.py  resnet.py  resnet18.cpp  resnet18_structure.txt  resnet_build.py  resnet_functions.py  resnet_model.py  resnet_pytorch.py  run.sh
examples/my_resnet/c_resnet/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  demo.cpp  demo.h  raw.cpp  resnet18.cpp  resnet18.h  resnet18_test  resnet18_test.cpp  resnet_tb.cpp  run.tcl  run_cosim.tcl  run_csim.tcl  run_demo_csynth.tcl  run_raw_csynth.tcl  weights.h
examples/my_resnet/c_resnet/prj/: hls.app
examples/my_resnet/c_resnet/prj/solution1/: solution1.aps
examples/my_resnet/c_resnet/prj/solution1/.autopilot/: .autopilot_exit
examples/my_resnet/c_resnet/prj/solution1/.autopilot/db/: .message_csim.xml
utils/: functions.py
